test_files/negative/name/badescape.stats
Version : 1.5
Incremental updates : 0
Neither updates nor object streams nor free objects nor encryption
PDF error : Lexing error : invalid escape sequence in name context in object 1 at offset 62 [0x3e] in file !
